start cleanup of CSS

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -3,14 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Horiseon</title>
 </head>
+
 <body>
 
 <!--Navigation-->
     <header>
-        <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
+        <h1>Hori<span>seo</span>n</h1>
+        <nav>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -22,17 +24,18 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+        </nav>
+    </header>
 
 <!--Hero-->
     <section class="hero">
 
     </section>
 
-<!--Search Engine Optimization-->
-    <section class="search-engine-optimization">
-        <img src="./assets/images/search-engine-optimization.jpg" class="float-left" />
+<!--Services Offered-->
+  <!--Search Engine Optimization-->
+    <section class="services">
+        <img class="services-img img-left" src="./assets/images/search-engine-optimization.jpg" alt="A desktop with various programming tools and a diagram of search engine optimization" />
         <h2>Search Engine Optimization</h2>
         <p>
             The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
@@ -40,9 +43,9 @@
         </p>
     </section>
 
-<!--Online Reputation Management-->
-    <section id="online-reputation-management" class="online-reputation-management">
-        <img src="./assets/images/online-reputation-management.jpg" class="float-right" />
+  <!--Online Reputation Management-->
+    <section id="online-reputation-management" class="services">
+        <img class="services-img img-right" src="./assets/images/online-reputation-management.jpg" alt="A businessman carefully tracking a company's reputation" />
         <h2>Online Reputation Management</h2>
         <p>
             The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. 
@@ -50,9 +53,9 @@
         </p>
     </section>
 
-<!--Social Media Marketing-->
-    <section id="social-media-marketing" class="social-media-marketing">
-        <img src="./assets/images/social-media-marketing.jpg" class="float-left" />
+  <!--Social Media Marketing-->
+    <section id="social-media-marketing" class="services">
+        <img class="services-img img-left" src="./assets/images/social-media-marketing.jpg" alt="A team of people talking about social media with colorful props" />
         <h2>Social Media Marketing</h2>
         <p>
             Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, 
