fixed formatting of services and benefits section

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,53 +33,55 @@
     </section>
 
 <!--Services Offered-->
-  <!--Search Engine Optimization-->
     <section class="services">
-        <img class="services-img img-left" src="./assets/images/search-engine-optimization.jpg" alt="A desktop with various programming tools and a diagram of search engine optimization" />
-        <h2>Search Engine Optimization</h2>
-        <p>
+      <!--Search Engine Optimization-->
+      <section id="search-engine-optimization" class="services-item">
+          <img class="services-img img-left" src="./assets/images/search-engine-optimization.jpg" alt="A desktop with various programming tools and a diagram of search engine optimization" />
+          <h2>Search Engine Optimization</h2>
+          <p>
             The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
             Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
-        </p>
-    </section>
+          </p>
+      </section>
 
-  <!--Online Reputation Management-->
-    <section id="online-reputation-management" class="services">
-        <img class="services-img img-right" src="./assets/images/online-reputation-management.jpg" alt="A businessman carefully tracking a company's reputation" />
-        <h2>Online Reputation Management</h2>
-        <p>
+      <!--Online Reputation Management-->
+      <section id="online-reputation-management" class="services-item">
+          <img class="services-img img-right" src="./assets/images/online-reputation-management.jpg" alt="A businessman carefully tracking a company's reputation" />
+          <h2>Online Reputation Management</h2>
+          <p>
             The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. 
             Online Reputation Management gives you the control over what potential customers see when they search for your business.
-        </p>
-    </section>
+          </p>
+      </section>
 
-  <!--Social Media Marketing-->
-    <section id="social-media-marketing" class="services">
-        <img class="services-img img-left" src="./assets/images/social-media-marketing.jpg" alt="A team of people talking about social media with colorful props" />
-        <h2>Social Media Marketing</h2>
-        <p>
+      <!--Social Media Marketing-->
+      <section id="social-media-marketing" class="services-item">
+          <img class="services-img img-left" src="./assets/images/social-media-marketing.jpg" alt="A team of people talking about social media with colorful props" />
+          <h2>Social Media Marketing</h2>
+          <p>
             Social media continues to have a sizable influence on buying habits. Social media marketing helps you determine which platforms are suited to your brand, 
             using analytics to find the right markets and increase your lead generation.
-        </p>
+          </p>
+      </section>
     </section>
 
 <!--Benefits-->
     <section class="benefits">
-        <div class="benefit-lead">
+        <div class="benefit-item">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
             <p>
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
-        <div class="benefit-brand">
+        <div class="benefit-item">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
             <p>
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
-        <div class="benefit-cost">
+        <div class="benefit-item">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
             <p>
