cleaned up comments and small CSS changes

--- a/Develop/index.html
+++ b/Develop/index.html
@@ -11,7 +11,7 @@
 
 <!--Navigation-->
     <header>
-        <h1>Hori<span>seo</span>n</h1>
+        <h1>Hori<span id="header-span">seo</span>n</h1>
         <nav>
             <ul>
                 <li>
@@ -67,6 +67,7 @@
 
 <!--Benefits-->
     <section class="benefits">
+        <!--Lead Generation-->
         <div class="benefit-item">
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" />
@@ -74,6 +75,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </div>
+        <!--Brand Awareness-->
         <div class="benefit-item">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" />
@@ -81,6 +83,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </div>
+        <!--Cost Management-->
         <div class="benefit-item">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png"></img>
