--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
           <img class="services-img img-left" src="./assets/images/search-engine-optimization.jpg" alt="A desktop with various programming tools and a diagram of search engine optimization" />
           <h2>Search Engine Optimization</h2>
           <p>
-            The of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
+            The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. 
             Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
           </p>
       </section>
